# python-mimo-sms

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml  setup.py
.github/workflows/: python-app.yml
mimo/: __init__.py  communication.py  factory.py  gateway.py  message.py  sender.py  tools.py
mimo_sms/: __init__.py  connection.py
mimo_sms/resources/: __init__.py  campains.py  contacts.py  groups.py  messages.py  senders.py
mimo_sms/tests/: test_mimo_sms.py
src/mimo/: __init__.py  factory.py  gateway.py  message.py  sender.py  tools.py
src/mimosms/: __init__.py  contacts.py  messages.py  refactor.py
src/tests/: test_mimo_sms.py
tests/: test_message_service.py  test_mimo_factory.py  test_mimo_service.py  test_sender_service.py
tests/stubs/: __init__.py  mimo_gateway_stub.py  requests_gateway_stub.py
